--- a/manifest.json
+++ b/manifest.json
@@ -3,22 +3,22 @@
     "name": "Ranking Lists",
     "icons": [
       {
-        "src": "/icons/icon-192x192.png",
+        "src": "icons/icon-192x192.png",
         "type": "image/png",
         "sizes": "192x192"
       },
       {
-        "src": "/icons/icon-512x512.png",
+        "src": "icons/icon-512x512.png",
         "type": "image/png",
         "sizes": "512x512"
       },
       {
-        "src": "/icons/icon-1024x1024.png",
+        "src": "icons/icon-1024x1024.png",
         "type": "image/png",
         "sizes": "1024x1024"
       }
     ],
-    "start_url": "/",
+    "start_url": ".",
     "display": "standalone",
     "background_color": "#ffffff",
     "theme_color": "#000000"
