--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ gloo-storage = "0.2"
 indexmap = { version = "2", features = ["serde"] }
 js-sys = "0.3"
 log = "0.4"
+getrandom = { version = "0.2", features = ["js"] }
 regex = "1"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
@@ -19,6 +20,7 @@ wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
 web-sys = { version = "0.3", features = ["Window", "Element", "EventTarget", "TouchEvent", "HtmlElement", "Touch", "DomTokenList", "Document"] }
 yew = { version = "0.20", features = ["csr"] }
+rand = { version = "0.8", features = ["std"] }
 
 [lib]
 crate-type = ["cdylib", "rlib"]
