--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 wasm-bindgen = "0.2.100"
 wasm-bindgen-futures = "0.4"
-web-sys = { version = "0.3", features = ["Window", "Element", "EventTarget", "TouchEvent", "HtmlElement", "Touch", "DomTokenList", "Document", "PointerEvent"] }
+web-sys = { version = "0.3", features = ["Window", "Element", "EventTarget", "TouchEvent", "HtmlElement", "Touch", "DomTokenList", "Document", "PointerEvent", "CssStyleDeclaration"] }
 yew = { version = "0.20", features = ["csr"] }
 rand = { version = "0.8", features = ["std"] }
 
